--- a/Web/src/styles/element/index.scss
+++ b/Web/src/styles/element/index.scss
@@ -1,12 +1,22 @@
 // @use "./dark.scss";
 $--colors: (
-  "primary": ("base": #0055ff,
-    // "base": green,
+  "primary": (
+    "base": #4f46e5,
+    // "light-3": #6366f1,
+  ),
+  "success": (
+    // "base": #22c55e,
+  ),
+  "warning": (
+    "base": #f59e0b,
+  ),
+  "danger": (
+    "base": #ef4444
   )
 );
 
 $--border-radius: (
-  "small": 8px,
+  "small": 6px,
   "base": 8px,
   "round": 20px
 );
